--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Tohid-Ai-Quiz-Bot",
   "description": "AI-Powered Telegram Quiz Bot by Tohid",
   "repository": "https://github.com/Tohidkhan6332/Tohid-Ai-Quiz-Bot",
-  "logo": "https://d.uguu.se/gVOjhEwP.jpg",
+  "logo": "https://ibb.co/gMQ3xkwG",
   "keywords": [
     "telegram",
     "quiz",
