--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "engines": {
     "node": "18.x",
-    "npm": "9.x"
+    "npm": ">=9.x"
   },
   "keywords": [
     "telegram",
@@ -30,7 +30,8 @@
     "telegraf": "^4.16.3",
     "mongoose": "^8.5.0",
     "axios": "^1.7.7",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
